# control_residentes_backend_api

./: .dockerignore  .gitignore  ACCESOS_ARQUITECTURA_VISUAL.py  ACCESOS_ENDPOINTS_EJEMPLOS.py  ACCESOS_ENDPOINTS_IMPLEMENTACION.md  ACCESOS_RESUMEN_CAMBIOS.md  API_DOCUMENTACION_COMPLETA.md  ARQUITECTURA.md  AUDITORIA_DOCUMENTACION_APIs.md  CAMBIOS_APIs_Propietarios_Miembros.md  CAMBIOS_REALIZADOS_DOCUMENTACION.md  CAMBIOS_USUARIO_CREADO.md  CHANGELOG.md  CHANGELOG_VISITANTES.md  CHECKLIST_DOCUMENTACION.md  CONCLUSION.md  CONFIGURACION_VARIABLES_ENTORNO.md  CONTRIBUTING.md  CONTROL_DUPLICADOS_VISITANTES.md  DEPLOYMENT.md  DESPLIEGUE_CLOUD_RUN.md  DOCUMENTACION_ZONA_HORARIA.md  DOCUMENTOS_GENERADOS_ADMIN.md  Dockerfile  EJEMPLOS_USO.md  ESTADO_PROYECTO.md  EVALUACION_ADMIN_REQUIREMENTS.md  EVALUACION_FINAL_ADMIN.md  FINAL_SUMMARY.md  FIREBASE_INTEGRATION.md  GUIA_DESPLIEGUE_ACCESOS.sh  GUIA_DESPLIEGUE_VARIABLES_ENTORNO.md  GUIA_PERFIL_USUARIO.md  GUIA_VISITANTES_FLUTTER.md  HALLAZGOS_CLAVE_ADMIN.md  IMPLEMENTACION_ADMIN_COMPLETA.md  IMPLEMENTACION_COMPLETADA.md  IMPLEMENTACION_PERFIL_USUARIO.md  IMPLEMENTACION_VISITANTES_ENDPOINT.md  INDEX.md  (+42 more)
.github/workflows/: ci-cd.yml
app/: __init__.py  config.py  main.py
app/application/: __init__.py
app/application/dto/: __init__.py
app/application/services/: __init__.py  accesos_service.py  servicios.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  models.py
app/domain/use_cases/: __init__.py  qr_use_cases.py
app/infrastructure/: __init__.py
app/infrastructure/db/: __init__.py  database.py  models.py
app/infrastructure/firestore/: __init__.py  client.py
app/infrastructure/notifications/: __init__.py  fcm_client.py
app/infrastructure/security/: __init__.py  auth.py  firebase_auth.py
app/infrastructure/utils/: __init__.py  time_utils.py
app/interfaces/routers/: __init__.py  accesos_router.py  cuentas_router.py  miembros_router.py  propietarios_router.py  qr_router.py  residentes_router.py
app/interfaces/schemas/: __init__.py  schemas.py
