[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "residencial-api"
version = "1.0.0"
description = "Backend API for Residential Access Control System"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Development Team", email = "dev@residencial.com"}
]
keywords = ["fastapi", "postgresql", "firebase", "access-control"]

[project.urls]
Homepage = "https://github.com/tu-usuario/backend-api"
Documentation = "https://backend-api.readthedocs.io"
Repository = "https://github.com/tu-usuario/backend-api.git"
Issues = "https://github.com/tu-usuario/backend-api/issues"

[tool.setuptools]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  migrations
  | \.venv
  | venv
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = ["migrations", ".venv"]
known_first_party = ["app"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "firebase_admin"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"
markers = [
    "integration: Integration tests",
    "unit: Unit tests",
    "slow: Slow tests",
    "async: Async tests",
    "smoke: Smoke tests",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstract",
]
precision = 2

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_any_generics = false
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "firebase_admin.*",
    "google.cloud.*",
]
ignore_missing_imports = true

[tool.pylint.messages_control]
disable = [
    "C0330", "C0326",  # Bad whitespace
    "R0201",           # Method could be a function
    "R0903",           # Too few public methods
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "Run", "_"]

[tool.pylint.design]
max-attributes = 7
max-arguments = 6
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
skips = ["B101"]  # assert_used

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.12.0"
pydantic = "^2.4.0"
pydantic-settings = "^2.0.0"
psycopg2-binary = "^2.9.0"
firebase-admin = "^6.2.0"
python-jose = "^3.3.0"
passlib = "^1.7.0"
bcrypt = "^4.1.0"
python-multipart = "^0.0.6"
python-dotenv = "^1.0.0"
httpx = "^0.25.0"
requests = "^2.31.0"
redis = "^5.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.1.0"
black = "^23.10.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
pylint = "^3.0.0"
mypy = "^1.6.0"
bandit = "^1.7.0"
faker = "^20.0.0"
freezegun = "^1.2.0"
